# aero

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/autobahn/: fuzzingserver.json  validate_reports.py
.github/workflows/: autobahn-websocket-client.yml  clang-format.yml  clang-tidy.yml  linux-clang.yml  linux-gcc.yml  macos-appleclang.yml  windows-clang-cl.yml  windows-msvc.yml
cmake/: AeroOptions.cmake  AeroUseAsio.cmake  AeroUseBoostExtUT.cmake  AeroUseGTest.cmake  AeroUseMagicEnum.cmake  AeroUseTLS.cmake  AeroUseUTFCpp.cmake
cmake/scripts/: FindAsio.cmake
examples/: .clang-tidy  CMakeLists.txt  autobahn_client.cpp  chilkat.cpp
examples/http/: CMakeLists.txt  httpforever.cpp  server.cpp
examples/http/tls/: async_example.cpp  coro_example.cpp  example.cpp
examples/tls/: async_postman.cpp  binance_stream.cpp
examples/websocket/: CMakeLists.txt  autobahn_client.cpp  chilkat.cpp
examples/websocket/tls/: async_postman.cpp  binance_stream.cpp
include/aero/: aero.hpp  base64.hpp  deadline.hpp  default_executor.hpp  error.hpp  final_action.hpp  http.hpp  io_runtime.hpp  net.hpp  tls.hpp  wait_threads.hpp  websocket.hpp
include/aero/base64/: base64.hpp
include/aero/base64/impl/: base64.hpp
include/aero/detail/: aligned_allocator.hpp  attributes.hpp  bytes.hpp  concepts.hpp  final_action.hpp  ip_address_validator.hpp  rfc_grammar.hpp  sha1.hpp  string.hpp  utf8.hpp
include/aero/detail/impl/: sha1.hpp
include/aero/http/: basic_client.hpp  client.hpp  client_options.hpp  context.hpp  error.hpp  headers.hpp  method.hpp  port.hpp  request.hpp  request_line.hpp  response.hpp  server.hpp  status.hpp  status_code.hpp  status_line.hpp  uri.hpp  version.hpp
include/aero/http/detail/: common.hpp  connection_pool.hpp  header_fields.hpp  header_validator.hpp  headers_parser.hpp  line_endings.hpp  request_target_validator.hpp  status_line_parser.hpp
include/aero/http/impl/: header_parser.ipp  headers_parser.ipp  request_line_parser.ipp  status_line_parser.ipp  uri_parser.ipp
include/aero/net/: error.hpp  tcp_transport.hpp  tls_transport.hpp
include/aero/net/concepts/: transport.hpp
include/aero/net/detail/: basic_transport.hpp
include/aero/tls/: aia_fetching_verify_callback.hpp  error.hpp  initialize.hpp  peer_identity.hpp  sha256.hpp  sni.hpp  system_context.hpp  verify_mode.hpp  version.hpp
include/aero/tls/detail/: alert_capture.hpp  base64.hpp  sha1.hpp  win32_aia_fetching_callback.hpp  x509_verify_error.hpp
include/aero/util/: base64.hpp  bytes.hpp  ip_address_validator.hpp  sha1.hpp  string.hpp
include/aero/websocket/: basic_client.hpp  client.hpp  client_handshaker.hpp  client_options.hpp  close_code.hpp  error.hpp  message.hpp  state.hpp  uri.hpp
include/aero/websocket/concepts/: masking_key_source.hpp  websocket_client.hpp
include/aero/websocket/detail/: .clang-tidy  accept_challenge.hpp  client_frame_builder.hpp  concepts.hpp  frame.hpp  frame_decoder.hpp  frame_encoder.hpp  message_assembler.hpp  message_reader.hpp  opcode.hpp  role.hpp  utf8_validator.hpp
include/aero/websocket/impl/: uri_parser.ipp
include/aero/websocket/tls/: client.hpp
tests/: .clang-tidy  CMakeLists.txt  error_code.cpp  error_code_test_helper.hpp  io_runtime.cpp  ut.hpp
tests/base64/: CMakeLists.txt  base64_encode.cpp  base64_impl.cpp
tests/http/: CMakeLists.txt  client.cpp  client_requests.cpp  connection_pool.cpp  error_code.cpp  header_fields.cpp  headers.cpp  headers_parser.cpp  method.cpp  request_line.cpp  status.cpp  status_code.cpp  status_line.cpp  tcp_acceptor.hpp  uri.cpp  version.cpp
tests/http/server/: server.cpp
tests/http_client/: CMakeLists.txt  client.cpp  client_requests.cpp  connection_pool.cpp  headers.cpp  method.cpp  request_line.cpp  tcp_acceptor.hpp  uri.cpp  version.cpp
tests/http_primitives/: CMakeLists.txt  error_code.cpp  method.cpp  request_line.cpp  version.cpp
tests/http_server/: CMakeLists.txt  headers_validation.cpp  request_line_validation.cpp  server.cpp
tests/ip_address_validator/: CMakeLists.txt  ipv4_address_validation.cpp  ipv6_address_validation.cpp
tests/sha1/: CMakeLists.txt  sha1_impl.cpp
tests/string/: CMakeLists.txt  striequal.cpp
tests/tls/: CMakeLists.txt  sha256.cpp
tests/util/: CMakeLists.txt  base64.cpp  io_runtime.cpp  ip_address_validator.cpp  string.cpp
tests/util/ip_address_validator/: CMakeLists.txt  ipv4_address_validation.cpp  ipv6_address_validation.cpp
tests/util/sha1/: CMakeLists.txt  sha1_impl.cpp
tests/util/string/: CMakeLists.txt
tests/websocket/: CMakeLists.txt  accept_challenge.cpp  basic_client.cpp  client_completion_tokens.cpp  client_frame_builder.cpp  client_handshaker.cpp  close_code.cpp  error_code.cpp  frame.cpp  frame_decoder.cpp  frame_encoder.cpp  message.cpp  message_assembler.cpp  message_reader.cpp  tcp_acceptor.hpp  test_helpers.hpp  uri.cpp  utf8_validator.cpp
tests/websocket/network/tcp/: client.cpp
tests/websocket/network/tls/: client.cpp
