function(_create_directory_executables_from_sources examples_sources)
  foreach(src ${examples_sources})
    get_filename_component(example ${src} NAME_WE)
    add_executable(${example} ${src})
    target_link_libraries(${example} PRIVATE aero::aero)
    target_compile_definitions(${example} PRIVATE NOMINMAX)
    target_compile_features(${example} PRIVATE cxx_std_23)
  endforeach()
endfunction()

file(GLOB aero_examples_SOURCES *.cpp)
_create_directory_executables_from_sources("${aero_examples_SOURCES}")

if(AERO_USE_TLS)
  message(STATUS "[AERO] Adding TLS examples")
  file(GLOB aero_tls_examples_SOURCES tls/*.cpp)
  _create_directory_executables_from_sources("${aero_tls_examples_SOURCES}")
endif()